--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="reset.css">
-  <link rel="stylesheet" type="text/css" href="screen.css">
-  <link rel="stylesheet" type="text/css" href="fibonacci.css">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/screen.css">
+  <link rel="stylesheet" type="text/css" href="css/fibonacci.css">
 </head>
 <body>
   <h1>Fibonacci</h1>
   <h2>Flexbox Composer</h2>
   <section id='container'></section>
   <textarea name="fb_export" id='codeExportTextarea' readonly></textarea>
-  <img id="triggerHTMLCode" src="HTMLFile.png" alt="Export HTML">
-  <img id="triggerCSSCode" src="CSSFile.png" alt="Export CSS">
-  <img id="triggerInfo" src="info.png" alt="Export CSS">
+  <img id="triggerHTMLCode" src="img/HTMLFile.png" alt="Export HTML">
+  <img id="triggerCSSCode" src="img/CSSFile.png" alt="Export CSS">
+  <img id="triggerInfo" src="img/info.png" alt="Export CSS">
   <br>
   <span>Export HTML</span>
   <span>Export CSS</span>
@@ -22,7 +22,7 @@
     A project by <a href='http://maxsteenbergen.com'>Max Steenbergen</a>
   </footer>
 
-  <script type="text/javascript" src="jquery.js"></script>
-  <script src="fibonacci.js" type="text/javascript"></script>
+  <script src="js/jquery.js" type="text/javascript" ></script>
+  <script src="js/fibonacci.js" type="text/javascript"></script>
 </body>
 </html>
