--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <link rel="stylesheet" type="text/css" href="css/fibonacci.css">
 </head>
 <body>
-  <h1>Fibonacci</h1>
-  <h2>Flexbox Composer</h2>
+  <header id="header" class="">
+    <img id='fibonacci_icon' src="img/fibonacci_icon@2x.png" alt="">
+    <h1>Fibonacci</h1>
+    <h2>Flexbox Composer</h2>
+  </header>
   <section id='container'></section>
   <textarea name="fb_export" id='codeExportTextarea' readonly></textarea>
   <img id="triggerHTMLCode" src="img/HTMLFile.png" alt="Export HTML">
@@ -21,6 +24,8 @@
   <footer>
     A project by <a href='http://maxsteenbergen.com'>Max Steenbergen</a>
   </footer>
+
+  <a href="https://github.com/you"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
 
   <script src="js/jquery.js" type="text/javascript" ></script>
   <script src="js/fibonacci.js" type="text/javascript"></script>
