Change <section>'s to <div>'s
<div>'s are more appropriate semantically, as mentioned in issue #3

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Fibonacci</h1>
     <h2>Flexbox Composer</h2>
   </header>
-  <section id='container'></section>
+  <div id='container'></div>
   <textarea name="fb_export" id='codeExportTextarea' readonly></textarea>
   <img id="triggerHTMLCode" src="img/HTMLFile.png" alt="Export HTML">
   <img id="triggerCSSCode" src="img/CSSFile.png" alt="Export CSS">
