--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/screen.css">
   <link rel="stylesheet" type="text/css" href="css/fibonacci.css">
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/styles/monokai_sublime.min.css">
 </head>
 <body>
   <header id="header" class="">
     <h1>Fibonacci</h1>
     <h2>Flexbox Composer</h2>
   </header>
-  <div id='container'></div>
-  <textarea name="fb_export" id='codeExportTextarea' readonly></textarea>
+  <div id='container'>
+  </div>
+  <pre><code id='codeExportTextarea'></code></pre>
   <img id="triggerHTMLCode" src="img/HTMLFile.png" alt="Export HTML">
   <img id="triggerCSSCode" src="img/CSSFile.png" alt="Export CSS">
   <img id="triggerInfo" src="img/info.png" alt="Export CSS">
   <br>
-  <span>Export HTML</span>
-  <span>Export CSS</span>
-  <span>About Fibonacci</span>
+  <span class='action'>Export HTML</span>
+  <span class='action'>Export CSS</span>
+  <span class='action'>About Fibonacci</span>
 
   <footer>
     A project by <a href='http://maxsteenbergen.com'>Max Steenbergen</a>
@@ -27,6 +29,7 @@
   <a href="https://github.com/maxsteenbergen/Fibonacci"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
 
   <script src="js/jquery.js" type="text/javascript" ></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js"></script>
   <script src="js/fibonacci.js" type="text/javascript"></script>
 </body>
 </html>
